# RobozzleSolver

./: .gitignore  Cargo.toml  README.md
benches/: backtrack.rs  game.rs
data/puzzles/: 100  1000  101  102  103  104  10459  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  12574  126  12629  12684  127  128  129  130  131  132  133  1337  (+942 more)
data/solutions/: 101  103  105  107  108  109  112  113  114  117  118  121  123  124  125  126  128  131  132  134  135  136  138  139  14  140  141  142  143  144  146  147  149  15  150  152  153  154  156  157  (+111 more)
src/: backtrack.rs  carlo.rs  constants.rs  game.rs  lib.rs  main.rs  solver.rs  tests.rs  web.rs
src/game/: board.rs  display.rs  instructions.rs  puzzle.rs  state.rs  tests.rs
src/solver/: backtrack.rs  backtrack_mt.rs  carlo.rs  mcts.rs  pruning.rs  solutions.rs
src/web/: errors.rs  tests.rs
