[package]
name = "solver"
version = "0.1.0"
authors = ["arnfaldur <aarnaldur+rust@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[profile.release]
debug = true

[dependencies]
colored = "1.8.0"
rand = "0.7.2"
rand_pcg = "0.2.0"
statrs = "0.12.0"
once_cell = "1.2.0"
crossbeam-channel = "0.3.9"
webdriver = "0.40.2"
fantoccini = "0.12.0-alpha.4"
tokio = "0.2.0-alpha.6"
serde = {version = "1.0.102", features = ["derive"]}
serde_json = "1.0.41"
