[package]
name = "solver"
version = "0.1.0"
authors = ["arnfaldur <aarnaldur+rust@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 3
debug = 2

[profile.dbg]
inherits = "dev"
opt-level = 0

[profile.release]
debug = 1

[[bench]]
name = "backtrack"
harness = false

[dependencies]
colored = "*"
rand = "*"
rand_pcg = "*"
statrs = "*"
once_cell = "*"
crossbeam-channel = "*"
tokio = {version = "*", features = ["rt-multi-thread"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
clap = "*"
thirtyfour = "*"
coz = "*"
smallvec = "*"

[dev-dependencies]
criterion = "*"